Issue #766: Ability to run custom requests in MCP Tools
* Refactored MCPConfigHelper.findTelemetryManagersByHostname to return a List of TelemetryManagers instead of an optional.
* Refactored both `TroubleshootHostService` and `HostDetailsService` to accept multiple telemetry managers of the same host if it is configured multiple times.
* Updated Unit tests consequently.
* Tested on Postman and OpenAI-GPT.